--- a/src/styles/logs.css
+++ b/src/styles/logs.css
@@ -7,7 +7,7 @@
   font-family: "Montserrat", sans-serif;
 }
 
-body {
+.LogsSite {
   background-color: #c9d6ff;
   background: linear-gradient(to right, #e2e2e2, #c9d6ff);
   display: flex;
@@ -17,7 +17,7 @@ body {
   height: 100vh;
 }
 
-.container {
+.loginContainer {
   background-color: #fff;
   border-radius: 30px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
@@ -28,7 +28,7 @@ body {
   min-height: 480px;
 }
 
-.container p {
+.loginContainer p {
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0.3px;
@@ -36,19 +36,19 @@ body {
   color: #ff0000; /* Đổi màu chữ của thông báo lỗi sang màu đỏ */
 }
 
-.container span {
+.loginContainer span {
   font-size: 12px;
   color: #0a0a0a; /* Đổi màu chữ của thông báo lỗi sang màu đỏ */
 }
 
-.container a {
+.loginContainer a {
   color: #333;
   font-size: 13px;
   text-decoration: none;
   margin: 15px 0 10px;
 }
 
-.container button {
+.loginContainer button {
   background-color: #4563e7;
   color: #fff;
   font-size: 12px;
@@ -62,12 +62,12 @@ body {
   cursor: pointer;
 }
 
-.container button.hidden {
+.loginContainer button.hidden {
   background-color: transparent;
   border-color: #fff;
 }
 
-.container form {
+.loginContainer form {
   background-color: #fff;
   display: flex;
   align-items: center;
@@ -77,7 +77,7 @@ body {
   height: 100%;
 }
 
-.container input {
+.loginContainer input {
   background-color: #eee;
   border: none;
   margin: 8px 0;
@@ -101,7 +101,7 @@ body {
   z-index: 2;
 }
 
-.container.active .sign-in {
+.loginContainer.active .sign-in {
   transform: translateX(100%);
 }
 
@@ -112,7 +112,7 @@ body {
   z-index: 1;
 }
 
-.container.active .sign-up {
+.loginContainer.active .sign-up {
   transform: translateX(100%);
   opacity: 1;
   z-index: 5;
@@ -159,7 +159,7 @@ body {
   z-index: 1000;
 }
 
-.container.active .toggle-container {
+.loginContainer.active .toggle-container {
   transform: translateX(-100%);
   border-radius: 0 150px 100px 0;
 }
@@ -177,7 +177,7 @@ body {
   transition: all 0.6s ease-in-out;
 }
 
-.container.active .toggle {
+.loginContainer.active .toggle {
   transform: translateX(50%);
 }
 
@@ -200,7 +200,7 @@ body {
   transform: translateX(-200%);
 }
 
-.container.active .toggle-left {
+.loginContainer.active .toggle-left {
   transform: translateX(0);
 }
 
@@ -209,7 +209,7 @@ body {
   transform: translateX(0);
 }
 
-.container.active .toggle-right {
+.loginContainer.active .toggle-right {
   transform: translateX(200%);
 }
 
